Resolved overlapping display of collection

--- a/src/cosmic_collector.css
+++ b/src/cosmic_collector.css
@@ -12,10 +12,11 @@
 
 .cosmic_event {
     width: 300px;
-    height: 150px;
+    height: 100%;
     margin: 10px;
     padding: 5px;
     border: 1px solid black;
     border-radius: 50px;
     text-align: center;
+
 }
